<resources>
    <string name="app_name">Bella City</string>
    <string name="name">الإسم</string>
    <string name="password">كلمة المرور</string>
    <string name="log_in">تسجيل دخول</string>
    <string name="invalid">غير صحيح</string>
    <string name="tech_name_bind">اسم الفني :  %s</string>
    <string name="warrnty_number">رقم شهادة الضمان :  %s</string>
    <string name="date">التاريخ :  </string>
    <string name="something_wrong">لقد انتهت فترة تسجيل دخولك من فضلك سجل دخولك مرة ثانية</string>
    <string name="enter_your_name">اسم المندوب</string>
    <string name="super_name">المشرف </string>
    <string name="general_super_name">المشرف العام</string>
    <string name="tech_name">اسم الفني </string>
    <string name="city">المحافظة</string>
    <string name="government_name">المدينة او المركز او الحي</string>
    <string name="consumer_name">اسم المستهلك</string>
    <string name="consumer_phone">رقم هاتف المستهلك</string>
    <string name="consumer_address">عنوان المستهلك</string>
    <string name="distributor_name">اسم الموزع</string>
    <string name="merchant_name">اسم التاجر</string>
    <string name="next">متابعة</string>

    <string name="book_number">رقم الدفتر</string>
    <string name="product_type">نوع المنتج</string>
    <string name="active_type">نوع التفعيل</string>
    <string name="serial">*سريال القطع والمواسير</string>
    <string name="check">تحقق من السريال</string>
    <string name="valid_serial_was_added">*السيريال الصحيح الذي تم اضافته</string>
    <string name="items">المنتجات</string>
    <string name="choosed_items">المنتجات التي تم اختيارها الان</string>
    <string name="gifts">هدايا تشجيعية</string>
    <string name="send">ارسال المتابعة</string>
    <string name="no_gifts">*اذا كان لا توجد هدية تشجيعية من فضلك اترك الخانة فارغة</string>

    <string name="permission">أذن تحقيق الموقع</string>
    <string name="gps_required">من فضلك فعل تحديد الموقع لارسال المعاينة</string>
    <string name="yes">حسناً</string>
    <string name="cancel">الغاء</string>

    <string name="play_services_required">خدمات جوجل مطلوبة من قبل هذا التطبيق </string>
    <string name="dialog_cancelled">تم الالغاء بواسطة المتسخدم</string>
    <string name="please_choose_cobon">*من فضلك ادخل رقم الكوبون</string>
    <string name="cobons">الكوبونات</string>
    <string name="selected_cobon_before">الكوبونات التي تم اختياراها من قبل</string>

    <string name="selected_part_seral_before">السريال الذي تم اضافته من قبل</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>