<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="cobonAdapter"
            type="com.bellacity.ui.fragment.addGrnt.adapter.cobonAdapter.CobonAdapter" />

        <variable
            name="validSerialAdapter"
            type="com.bellacity.ui.fragment.addGrnt.adapter.vaildSerialAdapter.ValidSerialAdapter" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frameLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.fragment.addGrnt.AddGrnt2Fragment">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar_custom"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/book_number_input"
                style="@style/DropDownTextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                app:errorEnabled="false"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/product_type_input"
                app:layout_constraintTop_toBottomOf="@+id/toolbar">

                <AutoCompleteTextView
                    android:id="@+id/auto_book_number"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:clickable="true"
                    android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
                    android:focusable="true"
                    android:focusableInTouchMode="false"
                    android:hint="@string/book_number"
                    android:inputType="none"
                    android:padding="8dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/product_type_input"
                style="@style/DropDownTextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:errorEnabled="false"
                app:hintEnabled="false"
                app:layout_constraintEnd_toStartOf="@+id/book_number_input"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/book_number_input">

                <AutoCompleteTextView

                    android:id="@+id/auto_product_type"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:clickable="true"
                    android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
                    android:focusable="true"
                    android:focusableInTouchMode="false"
                    android:hint="@string/product_type"
                    android:inputType="none"
                    android:padding="8dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/active_type_input"
                style="@style/DropDownTextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:errorEnabled="false"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="@+id/book_number_input"
                app:layout_constraintStart_toStartOf="@+id/product_type_input"
                app:layout_constraintTop_toBottomOf="@+id/book_number_input">

                <AutoCompleteTextView
                    android:id="@+id/auto_active_type"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:clickable="true"
                    android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
                    android:focusable="true"
                    android:focusableInTouchMode="false"
                    android:hint="@string/active_type"
                    android:inputType="none"
                    android:padding="8dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_cobon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:adapter="@{cobonAdapter}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="@+id/active_type_input"
                app:layout_constraintStart_toStartOf="@+id/active_type_input"
                app:layout_constraintTop_toBottomOf="@+id/tv_cobon" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/serial"
                android:textColor="@color/red"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/active_type_input"
                app:layout_constraintTop_toBottomOf="@+id/rv_cobon" />

            <ImageView
                android:id="@+id/im_take_photo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:srcCompat="@drawable/ic_baseline_camera_alt_24" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/serial_text_input"
                style="@style/TextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/serial"
                app:errorEnabled="false"
                app:layout_constraintEnd_toStartOf="@+id/im_take_photo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/check_btn"
                style="@style/MaterialButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/check"
                android:visibility="invisible"
                app:backgroundTint="@color/red"
                app:layout_constraintEnd_toEndOf="@+id/im_take_photo"
                app:layout_constraintStart_toStartOf="@+id/serial_text_input"
                app:layout_constraintTop_toBottomOf="@+id/serial_text_input" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_validte_serial"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical"
                app:adapter="@{validSerialAdapter}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@+id/next_btn"
                app:layout_constraintEnd_toEndOf="@+id/im_take_photo"
                app:layout_constraintStart_toStartOf="@+id/serial_text_input"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:reverseLayout="false" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/valid_serial_was_added"
                android:textColor="@color/red"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/check_btn"
                app:layout_constraintTop_toBottomOf="@+id/check_btn" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/next_btn"
                style="@style/MaterialButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/next"
                app:backgroundTint="@color/red"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_validte_serial" />

            <TextView
                android:id="@+id/tv_cobon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/please_choose_cobon"
                android:textColor="@color/red"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/active_type_input" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>